# Reachy-Mini-Gemini-PersonaPlex-Edition

./: CHANGELOG.md  NVIDIA_LICENSE.md  README.md  finalize_commits.py  make_20_more_commits.py  requirements.txt  run_empath.sh  super_launch.sh  test_voice.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  page.tsx
empath/: brain.py  detector.py  hearing.py  main.py  requirements.txt  robot_controller.py  voice.py
reachy_mini_empath/: README.md  index.html  pyproject.toml
reachy_mini_empath/reachy_mini_empath/: main.py  robot_controller.py
