[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reachy_mini_empath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    "gemini-robotics-client",
    "google-genai",
    "python-dotenv",
    "opencv-python",
    "numpy",
    "mediapipe",
    "SpeechRecognition",
    "PyAudio",
    "huggingface_hub",
    "openai",
    "gTTS",
    "fastapi",
    "uvicorn",
    "pillow"
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
reachy_mini_empath = "reachy_mini_empath.main:ReachyMiniEmpath"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_mini_empath = ["**/*"] # Also include all non-.py files